# tailoredscoop

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.debug  Dockerfile.test  Dockerfile.today  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: README.md  communications.md  meeting_preps.md  mongodb.md
docs/static/css/: extra.css
scripts/: log_top_stories.txt  log_top_stories_2023_05_11_abridge_async.txt  log_top_stories_2023_05_11_no_abridge_async.txt  query_mariadb.py  query_mongodb.py  sandbox.py  test.py  test_top_stories.py  today_story.py  top_queries.py  top_stories.py
scripts/logs/: log_top_stories_2023_05_10.txt  log_top_stories_2023_05_11.txt  log_top_stories_2023_05_11_no_abridge.txt
scripts/mongodb_queries/: delete.py  query_mongodb.py
scripts/queries/mongodb_queries/: delete.py  query_mongodb.py
scripts/scrape_topics/: queries.txt  scrape.py
scripts/testing/: pipeline.py  pipeline_google_rss_kw.py  prompt_tuning.py  today_story_with_kw.py  utils.py
tailoredscoop/: README.md  api.py  celerybeat-schedule  config.py  fakeserver.py  openai_api.py  tasks.py  today_story.py  utils.py
tailoredscoop/db/: init.py
tailoredscoop/documents/: keywords.py  process.py  summarize.py
tailoredscoop/news/: api.py  base.py  newsapi.py  newsapi_with_google_kw.py  users.py
tailoredscoop/news/fake_news/: article1.html  article1.txt  article2.txt  article3.html  article3.txt  article4.txt  article5.txt
tailoredscoop/news/google_news/: topics.py
tests/: conftest.py  test_init.py  test_pipeline.py
tests/api/: test_articles.py  test_emailsummary.py  test_summaries.py
tests/news/: test_newsapi.py
