[tool.poetry]
name = "tailoredscoop"
version = "0.1.0"
description = ""
authors = ["Chansoo Song"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
openai = "^0.27.5"
pyyaml = "^6.0"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
beautifulsoup4 = "^4.12.2"
transformers = "^4.28.1"
datasets = "^2.12.0"
torch = "==2.0.0"
protobuf = "^3.20"
pymongo = "^4.3.3"
mysql-connector-python = "^8.0.33"
sqlalchemy = "^2.0.12"
sendgrid = "^6.10.0"
boto3 = "^1.26.130"
ipykernel = "^6.22.0"
feedparser = "^6.0.10"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
requests-mock = "^1.10.0"
pytest-mock = "^3.10.0"
aioresponses = "^0.7.4"
pytest-asyncio = "^0.21.0"
mongomock = "^4.1.2"
isort = "^5.12.0"
django = "^4.2"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^23.3.0"
mkdocs = "^1.4.2"
mkdocs-material = ">=8.0.0,<9.0.0"
mkdocs-simple-blog = "^0.0.5"
mkdocstrings = "^0.20.0"
mkdocs-jupyter = "^0.22.0"
pymdown-extensions = "^9.9.2"
celery = "^5.2.7"
redis = "^4.5.4"
flower = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"